<resources>
    <string name="app_name">PlantSpotting</string>
    <!-- Add new entry -->
    <string name="addName">Name</string>
    <string name="addLatname">Latin name</string>
    <string name="addNote">Notes</string>
    <string name="addLocation">Include current location</string>
    <string name="addCamera">Take a picture</string>
    <string name="addAdd">Add</string>

    <!--Menus -->
    <string name="menuRemoveOne">Delete</string>
    <string name="menuRemoveAll">Delete All</string>
    <string name="menuAddNew">Add New</string>
    <string name="menuCredits">Credits</string>

    <!--Misc -->
    <string name="ok">OK</string>
    <string name="IOERROR">IOError happened</string>
    <string name="SECURITYERROR">Security error</string>
</resources>
